fix small line of whitespace

--- a/src/components/Landing.css
+++ b/src/components/Landing.css
@@ -7,7 +7,8 @@ video {
   }
   
   .landing-container {
-    height: 100vh;
+    /* height: 100vh; */
+    height: 98vh;
     width: 100%;
     display: flex;
     flex-direction: column;
